# apigw_http_api_lambda_dynamodb_python_cdk_stack

./: .env  .ruff.toml  README.md  app.py  cdk.context.json  main.py  pyproject.toml  requirements-dev.txt
apigw_http_api_lambda_dynamodb_python_cdk_stack/: apigw_http_api_lambda_dynamodb_python_cdk_stack_stack.py
lambda/apigw-handler/: index.py
tests/unit/: test_apigw_http_api_lambda_dynamodb_python_cdk_stack_stack.py
