[project]
name = "apigw-http-api-lambda-dynamodb-python-cdk-stack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib>=2.245.0,<3.0.0",
    "constructs>=10.5.0,<11.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]
